fix(footer): bordure bleu inset & logo toujours aligné en haut

--- a/src/component/footer/style/module/_default.scss
+++ b/src/component/footer/style/module/_default.scss
@@ -52,6 +52,7 @@
       &#{ns(enlarge-link)} {
         @include margin(-4v 0 -4v -4v);
         @include padding(4v);
+        align-self: flex-start;
       }
     }
   }
